--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.7.4",
+    "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-cloudinary": "^6.16.0",
